--- a/breta/templates/stripe_test.html
+++ b/breta/templates/stripe_test.html
@@ -216,7 +216,7 @@
         </div>
 
         <div class="span4">
-            <h1>Add payout method form</h1>
+            <h1>Make transaction</h1>
             <form action="/api/v1/transactions" method="POST" id="transaction-form">
               {% csrf_token %}
               <span class="payment-errors" style="color: red;"></span>
