--- a/server/ansible/roles/app/templates/nginx.conf.j2
+++ b/server/ansible/roles/app/templates/nginx.conf.j2
@@ -11,11 +11,6 @@ server {
 
     client_max_body_size 20M;
 
-    location / {
-        root /www/frontend/dist;
-        index index.html;
-    }
-
     location /app {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
@@ -27,6 +22,13 @@ server {
         uwsgi_modifier1 30;
         proxy_set_header SCRIPT_NAME /app;
     }
+
+    root /www/frontend/dist;
+    index index.html;
+    location / {
+        try_files $uri /index.html;
+    }
+
 }
 
 server {
