T94 Sending email about joining new users to admins

--- a/breta/templates/emails/accounts/developer_accepted.html
+++ b/breta/templates/emails/accounts/developer_accepted.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <p>You was accepted to beta!</p>
+    <p>You were accepted to beta!</p>
 
     <p>You can login using this link: <a href="{{ login_url }}">{{ login_url }}</a></p>
 
