--- a/breta/templates/emails/accounts/reset_password.html
+++ b/breta/templates/emails/accounts/reset_password.html
@@ -11,7 +11,7 @@
 
     Please go to the following page and choose a new password:
     {% block reset_link %}
-        {{ domain }}/restore-password/{{ uid }}/{{ token }}
+        {{ domain }}/restore-password/?uid={{ uid }}&token={{ token }}
 {#        {% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}#}
     {% endblock %}
 
