T126 Changed email template

--- a/breta/templates/emails/accounts/reset_password.html
+++ b/breta/templates/emails/accounts/reset_password.html
@@ -11,11 +11,8 @@
 
     Please go to the following page and choose a new password:
     {% block reset_link %}
-        {{ domain }}/restore-password/?uid={{ uid }}&token={{ token }}
-{#        {% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}#}
+        {{ domain }}/reset-password/confirm?uid={{ uid }}&token={{ token }}
     {% endblock %}
-
-    Your username, in case you've forgotten: {{ user.username }}
 
     Thanks for using our site!
 
