--- a/breta/templates/emails/accounts/reset_password.html
+++ b/breta/templates/emails/accounts/reset_password.html
@@ -1,22 +1,23 @@
 {% extends 'emails/base.html' %}
 
 {% block title %}
-    New user has joined!
+    Reset password
 {% endblock %}
 
 {% block content %}
 
     {% autoescape off %}
-    You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.
+    You're receiving this e-mail because you requested a password reset for your user account at Breta.com.
 
     Please go to the following page and choose a new password:
     {% block reset_link %}
-        {{ domain }}/reset-password/confirm?uid={{ uid }}&token={{ token }}
+        <a href="{{ domain }}/reset-password/confirm?uid={{ uid }}&token={{ token }}">reset link</a>.
     {% endblock %}
-
+        <br/>
+        <br/>
     Thanks for using our site!
 
-    The {{ site_name }} team.
+    The Breta.com team.
 
     {% endautoescape %}
 
