added pipeline to installed apps

--- a/server/ansible/roles/app/templates/nginx.conf.j2
+++ b/server/ansible/roles/app/templates/nginx.conf.j2
@@ -23,6 +23,11 @@ server {
         proxy_set_header SCRIPT_NAME /app;
     }
 
+    location /app/static {
+        autoindex on;
+        alias /www/backend/breta/staticfiles;
+    }
+
     root /www/frontend/dist;
     index index.html;
     location / {
