--- a/breta/templates/emails/accounts/welcome.html
+++ b/breta/templates/emails/accounts/welcome.html
@@ -1,11 +1,21 @@
 {% extends 'emails/base.html' %}
 
 {% block title %}
-    Hello, {{ user.first_name }}!
+    Hi, {{ user.first_name }}!
 {% endblock %}
 
 {% block content %}
+Welcome to Breta, a place to create better websites and apps - with confidence.
 
-    Welcome to breta.com!
+Here's how it works
+
+- Every time you start a project, you'll get a custom blueprint - for free.
+- All projects get access to a dedicated concierge and the best developers & designers from around the globe.  
+- Your concierge will manage the project so you don't have to. Totally stress-free, right?
+- Everything you do on Breta is quality guaranteed, and comes with a price match promise.
+
+So whether you're starting a project, or referring friends, thank you for joining :)
+
+Drop us a line at any time!
 
 {% endblock %}
