--- a/breta/templates/emails/projects/new_project.html
+++ b/breta/templates/emails/projects/new_project.html
@@ -6,8 +6,20 @@
 
 {% block content %}
 
-    <p>Thank you for submitting project!</p>
+Welcome to Breta, a place to create better websites and apps - with confidence.
 
-    <p>You can access your project using link: <a href="{{ project.get_absolute_url }}">{{ project.get_absolute_url }}</a></p>
+Here's how it works
+
+- Every time you start a project, you'll get a custom blueprint - for free.
+- All projects get access to a dedicated concierge and the best developers & designers from around the globe.  
+- Your concierge will manage the project so you don't have to. Totally stress-free, right?
+- Everything you do on Breta is quality guaranteed, and comes with a price match promise.
+
+The team thanks you for submitting your project, and for joining :)
+
+    <p>You can access your project using this link: <a href="{{ project.get_absolute_url }}">{{ project.get_absolute_url }}</a></p>
+
+
+Your dedicated concierge will be in touch soon with your free blueprint, but don't hesitate to drop us a line at any time!
 
 {% endblock %}
