--- a/breta/templates/emails/accounts/user_subscribed.html
+++ b/breta/templates/emails/accounts/user_subscribed.html
@@ -1,11 +1,13 @@
 {% extends 'emails/base.html' %}
 
 {% block title %}
-    Subscribing to Breta news and updates!
+    Thanks for subscribing to the Breta newsletter!
 {% endblock %}
 
 {% block content %}
 
-    Congratulations! You have been subscribed to breta news and updates!
+    You're in! Keep an eye out for our twice monthly newsletter. You've also been entered into our free monthly giveaway.
+    
+    Drop us a line if you need anything!
 
 {% endblock %}
