75 Changed withdrawing with paypal
Summary: 75 using user's paypal_email for withdraw request via paypal

Test Plan: -

Reviewers: lyapun

Reviewed By: lyapun

Differential Revision: http://phabricator.lyapun.com/D76

--- a/breta/templates/emails/payments/paypal_request.html
+++ b/breta/templates/emails/payments/paypal_request.html
@@ -8,6 +8,6 @@
 
     <p>{{ user.get_full_name }} requested ${{ amount }} via PayPal.</p>
 
-    <p>User's email is <a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
+    <p>User's email is <a href="mailto:{{ user.paypal_email }}">{{ user.paypal_email }}</a></p>
 
 {% endblock %}
