fixed link in new project email

--- a/breta/templates/emails/projects/new_project_admin.html
+++ b/breta/templates/emails/projects/new_project_admin.html
@@ -8,6 +8,6 @@
 
 <p>New project was created!</p>
 
-<p>You can access project using this link: <a href="https://easy.breta.com/app{% url 'admin:projects_project_change' project.id %}">https://easy.breta.com/app{% url 'admin:projects_project_change' project.id %}</a></p>
+<p>You can access project using this link: <a href="https://easy.breta.com{% url 'admin:projects_project_change' project.id %}">https://easy.breta.com{% url 'admin:projects_project_change' project.id %}</a></p>
 
 {% endblock %}
