--- a/breta/templates/emails/accounts/welcome.html
+++ b/breta/templates/emails/accounts/welcome.html
@@ -1,21 +1,21 @@
 {% extends 'emails/base.html' %}
 
 {% block title %}
-    Hi, {{ user.first_name }}!
+    Hi {{ user.first_name }}
 {% endblock %}
 
 {% block content %}
-Welcome to Breta, a place to create better websites and apps - with confidence.
+Welcome to Breta, a place to easily create custom apps and websites at a flexible cost. 
 
-Here's how it works
+What you can expect
+- Everyone gets a free custom blueprint. No credit card necessary.
+- Our intelligent platform guides and manages your project. Stress-free.
+- You'll get a dedicated concierge who's with you every step of the way.
+- We guarantee there's no need to worry about quality or reliability.
 
-- Every time you start a project, you'll get a custom blueprint - for free.
-- All projects get access to a dedicated concierge and the best developers & designers from around the globe.  
-- Your concierge will manage the project so you don't have to. Totally stress-free, right?
-- Everything you do on Breta is quality guaranteed, and comes with a price match promise.
 
-So whether you're starting a project, or referring friends, thank you for joining :)
+Thanks for joining, drop us a line any time.
+-The breta team
 
-Drop us a line at any time!
-
+P.S. Our price match promise will match a quoted price from any agency. We won't be beat!
 {% endblock %}
