--- a/breta/templates/emails/accounts/welcome.html
+++ b/breta/templates/emails/accounts/welcome.html
@@ -5,17 +5,17 @@
 {% endblock %}
 
 {% block content %}
+<p>&nbsp;</p>
 Welcome to Breta, a place to easily create custom apps and websites at a flexible cost. 
-
-What you can expect
-- Everyone gets a free custom blueprint. No credit card necessary.
-- Our intelligent platform guides and manages your project. Stress-free.
-- You'll get a dedicated concierge who's with you every step of the way.
-- We guarantee there's no need to worry about quality or reliability.
-
-
-Thanks for joining, drop us a line any time.
+<p>&nbsp;</p>
+What you can expect<br>
+- Everyone gets a free custom blueprint. No credit card necessary.<br>
+- Our intelligent platform guides and manages your project. Stress-free.<br>
+- Get access to a dedicated concierge who's with you every step of the way.<br>
+- No need to worry about quality or reliability. We guarantee them both.<br>
+<p>&nbsp;</p>
+We're excited to learn about your ideas. Drop us a line at any time by replying to this email.<br>
 -The breta team
-
+<p>&nbsp;</p>
 P.S. Our price match promise will match a quoted price from any agency. We won't be beat!
 {% endblock %}
