--- a/breta/templates/emails/projects/new_project.html
+++ b/breta/templates/emails/projects/new_project.html
@@ -1,25 +1,25 @@
 {% extends 'emails/clean.html' %}
 
 {% block title %}
-    Hi {{ project.user.first_name }},
+    Hi {{ user.first_name }}
 {% endblock %}
 
 {% block content %}
+<p>&nbsp;</p>
 Welcome to Breta, a place to easily create custom apps and websites at a flexible cost. 
-
-What you can expect
-- Everyone gets a free custom blueprint. No credit card necessary.
-- Our intelligent platform guides and manages your project. Stress-free.
-- You'll get a dedicated concierge who's with you every step of the way.
-- We guarantee there's no need to worry about quality or reliability.
-
+<p>&nbsp;</p>
+What you can expect<br>
+- Everyone gets a free custom blueprint. No credit card necessary.<br>
+- Our intelligent platform guides and manages your project. Stress-free.<br>
+- Get access to a dedicated concierge who's with you every step of the way.<br>
+- No need to worry about quality or reliability. We guarantee them both.<br>
+<p>&nbsp;</p>
 Your free blueprint has been added to the queue, and you should receive it from your concierge in 48 hours.
-
-<p>You can access your project by <a href="{{ project.get_absolute_url }}">clicking here</a>.</p>
-
-
-Thanks for joining!
+<p>&nbsp;</p>
+You can access your project by <a href="{{ project.get_absolute_url }}">clicking here</a>.
+<p>&nbsp;</p>
+We're excited to learn about your ideas. Drop us a line at any time by replying to this email.<br>
 -The breta team
-
+<p>&nbsp;</p>
 P.S. Our price match promise will match a quoted price from any agency. We won't be beat!
 {% endblock %}
