--- a/breta/templates/emails/projects/new_project.html
+++ b/breta/templates/emails/projects/new_project.html
@@ -1,7 +1,7 @@
 {% extends 'emails/clean.html' %}
 
 {% block title %}
-    Hi {{ user.first_name }}
+    Hi {{ project.user.first_name }}
 {% endblock %}
 
 {% block content %}
