--- a/breta/templates/emails/clean.html
+++ b/breta/templates/emails/clean.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" style="font-size: 100%; font-family: 'open sans', 'Avenir Next', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif; color: #ffffff; line-height: 1.65; margin: 0; padding: 0;">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
   </head>
-  <body style="font-size: 100%; font-family: 'open sans', 'Avenir Next', Helvetica, Arial, sans-serif; color: #000000; line-height: 1.65; width: 100% !important; height: 100%; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; background: #ffffff; margin: 0; padding: 0;" bgcolor="#ffffff">
+  <body>
 
 <!-- Message start -->
 {% block title %}{% endblock %}
