--- a/breta/templates/emails/projects/new_project.html
+++ b/breta/templates/emails/projects/new_project.html
@@ -1,23 +1,22 @@
 {% extends 'emails/clean.html' %}
 
 {% block title %}
-    Hi {{ project.user.first_name }}
+    Hi {{ project.user.first_name }},
 {% endblock %}
 
 {% block content %}
 <p></p>
-Welcome to Breta, a place to easily create custom apps and websites at a flexible cost. 
+Welcome to <a href="http://breta.com" target="_blank">Breta</a>, a place to easily create custom apps and websites at a flexible cost. 
 <p></p>
-What you can expect<br>
+What you can expect:<br>
 - Everyone gets a free custom blueprint. No credit card necessary.<br>
 - Our intelligent platform guides and manages your project. Stress-free.<br>
-- Get access to a dedicated concierge who's with you every step of the way.<br>
-- No need to worry about quality or reliability. We guarantee them both.<br>
+- Access to a concierge who guarantees your project, on both quality and reliability.<br>
 <p></p>
-Your free blueprint has been added to the queue, and you should receive it from your concierge in 48 hours. You can access your project by <a href="{{ project.get_absolute_url }}">clicking here</a>.
-<p></p>
+Your free blueprint has now been started - you'll receive it within 48 hours. Access your project by <a href="{{ project.get_absolute_url }}">clicking here</a>.
+<p>&nbsp;</p>
 We're excited to learn about your ideas. Drop us a line at any time by replying to this email.<br>
--The breta team
+-The Breta team
 <p></p>
 P.S. - Our price match promise will match a quoted price from any agency. We won't be beat!
 {% endblock %}
