--- a/breta/templates/emails/accounts/welcome.html
+++ b/breta/templates/emails/accounts/welcome.html
@@ -6,16 +6,15 @@
 
 {% block content %}
 <p></p>
-Welcome to Breta, a place to easily create custom apps and websites at a flexible cost. 
+Welcome to <a href="http://breta.com" target="_blank">Breta</a>, a place to easily create custom apps and websites at a flexible cost. 
 <p></p>
-What you can expect<br>
+What you can expect:<br>
 - Everyone gets a free custom blueprint. No credit card necessary.<br>
 - Our intelligent platform guides and manages your project. Stress-free.<br>
-- Get access to a dedicated concierge who's with you every step of the way.<br>
-- No need to worry about quality or reliability. We guarantee them both.<br>
-<p></p>
+- Access to a concierge who guarantees your project, on both quality and reliability.<br>
+<p>&nbsp;</p>
 We're excited to learn about your ideas. Drop us a line at any time by replying to this email.<br>
--The breta team
+-The Breta team
 <p></p>
 P.S. Our price match promise will match a quoted price from any agency. We won't be beat!
 {% endblock %}
